--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,18 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>tutorial-01</module>
+        <module>Tcp</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>io.projectreactor</groupId>
+                <artifactId>reactor-bom</artifactId>
+                <version>Dysprosium-SR11</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
