--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependency-tools</artifactId>
+                <version>2.3.3.RELEASE</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.18.12</version>
